--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
   <title>Belajar WebGL</title>
 </head>
 <body>
-  <br>
+    <br>
     <div id="hehe">
-        <p>Tekan Tombol X untuk membuat kubus berputar terhadap sumbu X</p>
-        <p>Tekan Tombol Y untuk membuat kubus berputar terhadap sumbu Y</p>
-        <p>Tekan Tombol Z untuk membuat kubus berputar terhadap sumbu Z</p>
+        <p>Tekan Pada Kubus</p>
+        <p>Sambil Menekan Gerakkan Mouse ke Atas Bawah Kanan Kiri</p>
+        <p>Dan Lihatlah Hasilnya :)</p>
     </div>
     <br>
     <br>
-  <div >
-      <div>
-          <canvas id="glcanvas" width="500" height="500">
-              Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
-            </canvas>
-      </div>  
-  </div>
-  
+<div>
+    <canvas id="glcanvas" width="640" height="480">
+        Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
+      </canvas>
+</div>
 
   <!-- Shaders -->
   <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
