--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </div>
 
   <!-- Shaders -->
-  <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
-  <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
-  <script name="shader" data-src="vertex2.glsl" data-type="vertex" data-version="v2"></script>
-  <script name="shader" data-src="fragment2.glsl" data-type="fragment" data-version="v2"></script>
+  <script name="shader" data-src="shaders/vertex.glsl" data-type="vertex" data-version="v1"></script>
+  <script name="shader" data-src="shaders/fragment.glsl" data-type="fragment" data-version="v1"></script>
+  <script name="shader" data-src="shaders/vertex2.glsl" data-type="vertex" data-version="v2"></script>
+  <script name="shader" data-src="shaders/fragment2.glsl" data-type="fragment" data-version="v2"></script>
 
   <!-- Library untuk men-dispatch methods -->
   <script type="text/javascript" src="libs/signals.js"></script>
